Fix html body overflowing vertically

--- a/static/css/design.css
+++ b/static/css/design.css
@@ -21,9 +21,10 @@
 }
 body{
     margin-top: 100px;
-    min-width: 620px;
+    min-width: 100%;
     background: var(--background);
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 h1{
@@ -32,7 +33,6 @@ h1{
     letter-spacing: 5px;
     color: floralwhite;
     transform: scale(1.2, 1);
-    width: 90vw
 }
 
 button{
